syntax = 'proto3';

package common;

message Ping {
  uint32 timestamp = 1;
}

message CommonPacket {
    uint32 handlerId = 1;
    string userId = 2;
    string version = 3;
    bytes payload = 4;
}

message InitialPacket {
  string deviceId = 1;
  uint32 playerId = 2;
  float latency = 3;
}