syntax = 'proto3';

package response;

message Response {
    uint handlerId = 1;
    uint responseCode = 2;
    uint64 timestamp = 3;
    bytes data = 4;
}

message InitialResponse {
    string gameId = 1;
    uint64 timestamp = 2;
    float x = 3;
    float y = 4;
}